# nr1-main/routes/v1/user-routes.js
@@ -1,0 +1,10 @@
+const express = require('express');
+const userController = require('../../controllers/userController');
+const auth = require('../../middleware/auth');
+const router = express.Router();
+
+router.post('/signup', userController.signup);
+router.post('/login', userController.login);
+router.get('/me', auth, userController.me);
+
+module.exports = router;
